# code-checkers

./: .gitignore  readme.md  run.py
backend/: config.py  main.py  requirements.txt  schemas.py
clang-tidy-plugin/: .gitignore  CMakeLists.txt  README.md  createNewChecker.py  testAll.sh  testFramework.sh
clang-tidy-plugin/src/: CMakeLists.txt
clang-tidy-plugin/src/assign_mistake_by_equal/: AssignMistakeByEqual.cpp  CMakeLists.txt  ExpectedAssignMistakeByEqual.cpp  TestAssignMistakeByEqual.cpp  test.sh
clang-tidy-plugin/src/condition_mistake_by_assign/: CMakeLists.txt  ConditionMistakeByAssign.cpp  ExpectedConditionMistakeByAssign.cpp  TestConditionMistakeByAssign.cpp  test.sh
clang-tidy-plugin/src/example/: CMakeLists.txt
clang-tidy-plugin/src/file_forget_close/: CMakeLists.txt  FileForgetClose.cpp  TestFileForgetClose.cpp
clang-tidy-plugin/src/snprintf_arg_count/: CMakeLists.txt  ExpectedSnprintfArgCount.cpp  SnprintfArgCount.cpp  TestSnprintfArgCount.cpp  test.sh
clang-tidy-plugin/tested_cpp/: CMakeLists.txt
docker/: dockerfile
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: codeCheck.ts
frontend/src/router/: index.ts
